[FEATURE] added python script that creates a topic named vehicle_positions on kafka

--- a/kafka/dockerfile
+++ b/kafka/dockerfile
@@ -2,5 +2,6 @@ FROM wurstmeister/kafka:latest
 
 ENV KAFKA_ZOOKEEPER_CONNECT=bdp-zookeeper-container:2181
 ENV KAFKA_LISTENERS=PLAINTEXT://:9092
+ENV KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
 
 EXPOSE 9092
