--- a/kafka/dockerfile
+++ b/kafka/dockerfile
@@ -1,7 +1,11 @@
-FROM wurstmeister/kafka:latest
+FROM bitnami/kafka:latest
 
+ENV KAFKA_BROKER_ID=1
 ENV KAFKA_ZOOKEEPER_CONNECT=bdp-zookeeper-container:2181
-ENV KAFKA_LISTENERS=PLAINTEXT://:9092
-ENV KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+ENV KAFKA_LISTENERS=INTERNAL://0.0.0.0:9093,EXTERNAL://0.0.0.0:9092
+ENV KAFKA_ADVERTISED_LISTENERS=INTERNAL://bdp-kafka-container:9093,EXTERNAL://localhost:9092
+ENV KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+ENV KAFKA_INTER_BROKER_LISTENER_NAME=INTERNAL
+ENV ALLOW_PLAINTEXT_LISTENER=yes
 
-EXPOSE 9092
+EXPOSE 9092 9093
